--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - NODE_ENV=production
+      - TOKEN_BOT=TOKEN_HERE
     networks:
       - app-network
 
